crates/jarl/tests/integration/snapshots/integration__jarl__fix_options-4.snap
---
source: crates/jarl/tests/integration/jarl.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--fix\").arg(\"--fix-only\").arg(\"--allow-no-vcs\").run().normalize_os_executable_name()"
---

success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --fix --fix-only --allow-no-vcs
