crates/jarl/tests/integration/snapshots/integration__jarl__fix_options.snap
---
source: crates/jarl/tests/integration/jarl.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--fix\").arg(\"--allow-no-vcs\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: duplicated_arguments
 --> test.R:3:1
  |
3 | list(x = 1, x = 2)
  | ^^^^^^^^^^^^^^^^^^ Avoid duplicate arguments in function calls. Duplicated argument(s): "x".

Found 1 error.

----- stderr -----

----- args -----
check . --fix --allow-no-vcs
