crates/jarl/tests/integration/snapshots/integration__jarl__parsing_braced_anonymous_function.snap
---
source: crates/jarl/tests/integration/jarl.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--allow-no-vcs\").run().normalize_os_executable_name()"
---

success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --allow-no-vcs
